--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,7 +86,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     //Lifecylescope extension
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.3.1")
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     // Annotation processor
     // alternately - if using Java8, use the following instead of lifecycle-compiler
