--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ obj/
 .idea/gradle.xml
 .idea/jarRepositories.xml
 .idea/navEditor.xml
-/.idea/deploymentTargetDropDown.xml
+.idea/deploymentTargetDropDown.xml
 
 # Legacy Eclipse project files
 .classpath
