--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ obj/
 .idea/jarRepositories.xml
 .idea/navEditor.xml
 .idea/deploymentTargetDropDown.xml
+.idea/runConfigurations.xml
 
 # Legacy Eclipse project files
 .classpath
