DI Provider Interface replaces Lambda in ViewModelFactory.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures  {
+        dataBinding true
     }
 }
 
@@ -82,6 +82,7 @@ dependencies {
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
