--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
+/.idea/deploymentTargetSelector.xml
+/.idea/migrations.xml
