--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
 /.idea/deploymentTargetSelector.xml
 /.idea/migrations.xml
+/.idea/kotlinc.xml
